// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Damage calculateDamage Great Sword 1`] = `
[
  {
    "elementalDamage": 0,
    "koDamage": undefined,
    "rawDamage": 144,
    "totalDamage": 144,
  },
]
`;

exports[`Damage calculateDamage Hammer 1`] = `
[
  {
    "elementalDamage": 0,
    "koDamage": 0,
    "rawDamage": 22,
    "totalDamage": 22,
  },
  {
    "elementalDamage": 0,
    "koDamage": 72,
    "rawDamage": 84,
    "totalDamage": 85,
  },
]
`;

exports[`Damage calculateDamage Lance Cut hitzone 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 25,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 25,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 27,
    "totalDamage": 29,
  },
]
`;

exports[`Damage calculateDamage Lance Modified impact hitzone 1`] = `
[
  {
    "elementalDamage": 2,
    "koDamage": undefined,
    "rawDamage": 47,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2,
    "koDamage": undefined,
    "rawDamage": 47,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2,
    "koDamage": undefined,
    "rawDamage": 50,
    "totalDamage": 53,
  },
]
`;

exports[`Damage calculateDamage Longsword Deviljho Spirit Gauge RED 1`] = `
[
  {
    "elementalDamage": 14,
    "koDamage": undefined,
    "rawDamage": 66,
    "totalDamage": 81,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge NONE 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 36,
    "totalDamage": 39,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge RED 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 48,
    "totalDamage": 50,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge WHITE 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 38,
    "totalDamage": 40,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge YELLOW 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 40,
    "totalDamage": 42,
  },
]
`;

exports[`Damage calculateDamage Switch Axe Element phial 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 30,
    "totalDamage": 33,
  },
]
`;

exports[`Damage calculateDamage Switch Axe Power phial 1`] = `
[
  {
    "elementalDamage": 3,
    "koDamage": undefined,
    "rawDamage": 35,
    "totalDamage": 39,
  },
]
`;

exports[`Damage calculateDamage Sword and Shield Cut attack 1`] = `
[
  {
    "elementalDamage": 1,
    "koDamage": undefined,
    "rawDamage": 15,
    "totalDamage": 16,
  },
]
`;

exports[`Damage calculateDamage Sword and Shield Impact attack 1`] = `
[
  {
    "elementalDamage": 0,
    "koDamage": 22,
    "rawDamage": 7,
    "totalDamage": 7,
  },
  {
    "elementalDamage": 0,
    "koDamage": 22,
    "rawDamage": 12,
    "totalDamage": 12,
  },
]
`;
